apps/ezxss/production/tunnelbinding.yaml
apiVersion: networking.cfargotunnel.com/v1alpha1
kind: TunnelBinding
metadata:
  name: ezxss
  namespace: ezxss
  labels:
    app.kubernetes.io/name: ezxss
    app.kubernetes.io/instance: ezxss
    app.kubernetes.io/component: tunnel
    app.kubernetes.io/part-of: ezxss
subjects:
- kind: Service
  name: ezxss
  spec:
    fqdn: dm3.in
    noTlsVerify: false
    proxyAddress: 127.0.0.1
    proxyPort: 0
    proxyType: ''
tunnelRef:
  kind: ClusterTunnel
  name: dm3-in
